--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="mengatur_penggunaan_aplikasi_untuk_anak_dengan_edukasi">Mengatur penggunaan aplikasi untuk anak dengan edukasi.</string>
     <string name="belum_punya_akun">Belum punya akun?</string>
     <string name="daftar_di_sini">Daftar di Sini</string>
+    <string name="daftar">Daftar</string>
 </resources>
